@@ -10,6 +10,7 @@ version 1.00:
 	- add bugtracker to meta
 	- add ellipsis modifier
 	- add chop modifier
+	- add defaults configuration
 
 version 0.96: Fri 12 Sep 14:01:16 CEST 2025
 
